# Molestus

./: Cargo.toml  README.md  install.ps1
.github/workflows/: release.yml
src/: ai.rs  capture.rs  main.rs  physics.rs
