[package]
name = "Molestus"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
image = "0.25.10"
rand = "0.10.1"
rapier2d = "0.33.0"
slint = "1.16.1"
tiny-skia = "0.12.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
windows = "0.62.2"
xcap = "0.9.6"
